--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./build/tailwind.css" />
+    <link rel="stylesheet" href="./public/build/tailwind.css" />
     <title>test</title>
   </head>
   <body>
@@ -122,7 +122,7 @@
       class="bg-gradient-to-r from-cyan-500 to-blue-500 flex h-screen justify-center items-center"
     >
       <div
-        x-data="{radio : 1 , activestyle : 'ring-2 ring-cyan-700 bg-sky-900 shadow-2xl' }"
+        x-data="{radio : 1 , activestyle : 'ring-2 ring-cyan-700 bg-sky-800 shadow-2xl' }"
         class="w-1/2 space-y-5"
       >
         <div
