--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
     >
       <div
         x-data="{radio : 1 , activestyle : 'ring-2 ring-cyan-700 bg-sky-900 shadow-2xl' }"
-        class="w-1/2 space-y-5"
+        class="w-screen container md:w-1/2 space-y-5"
       >
         <div
           @click="radio = 1"
