--- a/public/index.html
+++ b/public/index.html
@@ -206,6 +206,75 @@
       </div>
     </div>
 
+    <div
+      class="bg-gradient-to-r from-purple-500 to-pink-500 flex h-screen justify-center items-center"
+    >
+      <div class="bg-white rounded-xl p-3 w-screen md:w-1/2 container space-y-4 shadow-2xl">
+        <div  x-data="{showOne :false }">
+          <div
+            @click="showOne = !showOne"
+            class="inline-flex items-center bg-violet-200 w-full p-3 rounded-lg justify-between text-violet-800 cursor-pointer"
+          >
+            <p class="font-semibold">What is your refund policy?</p>
+            <svg
+              :class="showOne ? 'rotate-180':''"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6 transition-all duration-400"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m4.5 15.75 7.5-7.5 7.5 7.5"
+              />
+            </svg>
+          </div>
+          <div
+            x-show="showOne"
+            class="text-gray-600 font-semibold px-4 py-3 text-justify"
+          >
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+            explicabo suscipit vel! Porro temporibus maiores minus laborum vitae
+            provident cum?
+          </div>
+        </div>
+        <div x-data="{showTwo :false }">
+          <div
+            @click="showTwo = !showTwo"
+            class="inline-flex items-center bg-violet-200 w-full p-3 rounded-lg justify-between text-violet-800 cursor-pointer"
+          >
+            <p class="font-semibold">Do you offer technical support?</p>
+            <svg
+              :class="showTwo ? 'rotate-180':''"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="w-6 h-6 transition-all duration-400 "
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m4.5 15.75 7.5-7.5 7.5 7.5"
+              />
+            </svg>
+          </div>
+          <div
+            x-show="showTwo"
+            class="text-gray-600 font-semibold px-4 py-3 text-justify "
+          >
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+            explicabo suscipit vel! Porro temporibus maiores minus laborum vitae
+            provident cum?
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="//unpkg.com/alpinejs" defer></script>
   </body>
 </html>
