--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
       class="bg-gradient-to-r from-cyan-500 to-blue-500 flex h-screen justify-center items-center"
     >
       <div
-        x-data="{radio : 1 , activestyle : 'ring-2 ring-cyan-700 bg-sky-900 shadow-2xl' }"
+        x-data="{radio : 1 , activestyle : 'ring-2 ring-cyan-700 bg-sky-800 shadow-2xl' }"
         class="w-screen container md:w-1/2 space-y-5"
       >
         <div
@@ -209,11 +209,13 @@
     <div
       class="bg-gradient-to-r from-purple-500 to-pink-500 flex h-screen justify-center items-center"
     >
-      <div class="bg-white rounded-xl p-3 w-screen md:w-1/2 container space-y-4 shadow-2xl">
-        <div  x-data="{showOne :false }">
+      <div
+        class="bg-white rounded-xl p-3 w-screen md:w-1/2 container space-y-4 shadow-2xl"
+      >
+        <div x-data="{showOne :false }">
           <div
             @click="showOne = !showOne"
-            class="inline-flex items-center bg-violet-200 w-full p-3 rounded-lg justify-between text-violet-800 cursor-pointer"
+            class="inline-flex items-center bg-violet-200 w-full p-3 rounded-lg justify-between text-violet-800 cursor-pointer hover:bg-violet-200/30 transition-all duration-200"
           >
             <p class="font-semibold">What is your refund policy?</p>
             <svg
@@ -244,7 +246,7 @@
         <div x-data="{showTwo :false }">
           <div
             @click="showTwo = !showTwo"
-            class="inline-flex items-center bg-violet-200 w-full p-3 rounded-lg justify-between text-violet-800 cursor-pointer"
+            class="inline-flex items-center bg-violet-200 w-full p-3 rounded-lg justify-between text-violet-800 cursor-pointer hover:bg-violet-200/30 transition-all duration-200"
           >
             <p class="font-semibold">Do you offer technical support?</p>
             <svg
@@ -254,7 +256,7 @@
               viewBox="0 0 24 24"
               stroke-width="1.5"
               stroke="currentColor"
-              class="w-6 h-6 transition-all duration-400 "
+              class="w-6 h-6 transition-all duration-400"
             >
               <path
                 stroke-linecap="round"
@@ -265,11 +267,85 @@
           </div>
           <div
             x-show="showTwo"
-            class="text-gray-600 font-semibold px-4 py-3 text-justify "
+            class="text-gray-600 font-semibold px-4 py-3 text-justify"
           >
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
             explicabo suscipit vel! Porro temporibus maiores minus laborum vitae
             provident cum?
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div
+      class="bg-gradient-to-r from-sky-500 to-indigo-500 flex h-screen justify-center items-center"
+    >
+      <div x-data="{box:1}" class="w-screen container md:w-1/2 space-y-2">
+        <div
+          class="flex justify-around gap-3 p-2 rounded-xl text-center font-bold bg-blue-300 text-white"
+        >
+          <p
+           @click="box=1"
+            :class="box===1  ? ' bg-white rounded-lg text-blue-500 shadow-lg ' :''"
+            class="w-full cursor-pointer p-3"
+          >
+            React
+          </p>
+          <p
+           @click="box=2"
+            :class="box===2  ? ' bg-white rounded-lg text-blue-500 shadow-lg ' :''"
+            class="w-full cursor-pointer p-3"
+          >
+            Vue
+          </p>
+          <p
+            @click="box=3"
+            :class="box===3  ? ' bg-white rounded-lg text-blue-500 shadow-lg ' :''"
+            class="w-full cursor-pointer p-3"
+          >
+            Angular
+          </p>
+        </div>
+        <div x-show="box===1" class="bg-white w-full p-2 rounded-xl shadow-xl">
+          <div class="p-3 hover:bg-gray-300 rounded-lg cursor-pointer">
+            <h4 class="font-bold">Does drinking coffee make you smarter?</h4>
+            <p class="font-semibold text-gray-600">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+          <div class="p-3 hover:bg-gray-300 rounded-lg cursor-pointer">
+            <h4 class="font-bold">Does drinking coffee make you smarter?</h4>
+            <p class="font-semibold text-gray-600">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+        <div x-show="box===2" class="bg-white w-full p-2 rounded-xl shadow-xl">
+          <div class="p-3 hover:bg-gray-300 rounded-lg cursor-pointer">
+            <h4 class="font-bold">The most innovative things happening in coffee</h4>
+            <p class="font-semibold text-gray-600">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+          <div class="p-3 hover:bg-gray-300 rounded-lg cursor-pointer">
+            <h4 class="font-bold">The most innovative things happening in coffee</h4>
+            <p class="font-semibold text-gray-600">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+        <div x-show="box===3" class="bg-white w-full p-2 rounded-xl shadow-xl">
+          <div class="p-3 hover:bg-gray-300 rounded-lg cursor-pointer">
+            <h4 class="font-bold">Ask Me Anything: 10 answers to your questions about coffee</h4>
+            <p class="font-semibold text-gray-600">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+          <div class="p-3 hover:bg-gray-300 rounded-lg cursor-pointer">
+            <h4 class="font-bold">Ask Me Anything: 10 answers to your questions about coffee</h4>
+            <p class="font-semibold text-gray-600">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </p>
           </div>
         </div>
       </div>
