--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./build/tailwind.css" />
-    <title>test</title>
+    <link rel="shortcut icon" href="../assets/img/tailwindcss-mark.3c5441fc7a190fb1800d4a5c7f07ba4b1345a9c8.svg" type="image/x-icon">
+    <title>Copmonent</title>
   </head>
   <body>
     <div
